styles fixed. Overflow left

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,5 @@
+ion-content {--overflow: hidden}
+
 .flx-center {
   height: 100%;
   display: flex;
@@ -6,8 +8,4 @@
 
 .w100 {
   width: 100%;
-}
-
-ion-content {
-  --ion-background-color: #3dc2ff;
 }
