--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  height: 100vh;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0 auto;
+  font-family: sans-serif;
+}
